# rag-retrieval-system

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PRD.md  PROGRESS.md  README.md  TECH_STACK.md  WORKFLOW.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/raw/: privacy_policy.md  refund_policy.md  shipping_policy.md
src/app/: errors.py  main.py  middleware.py  retrieval_service.py  schemas.py  settings.py
src/rag/: __init__.py  bm25.py  build_index.py  chunking.py  dense.py  eval_retrieval.py
tests/: conftest.py  test_api_contract.py  test_bm25.py  test_chunking.py  test_dense.py
