[project]
name = "rag-retrieval-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "numpy",
    "prometheus-client",
    "pydantic-settings",
    "pytest",
    "ruff",
    "rank-bm25",
    "sentence-transformers",
    "uvicorn",
]
